# FliberAPI

FliberAPI/: .gitignore  Dockerfile  README.md  append_isdeleted.py  c_data.py  db_values.txt  docker-compose-dev.yml  docker-compose-qa.yml  docker-compose.yml  generate_table_values.py  list_files.py  output.xlsx  pyproject.toml  schema_values.txt  table_values.txt
FliberAPI/app/: main.py
FliberAPI/app/api/routes/: ability_configuration.py  advisor.py  api.py  areas_of_concerns.py  asset_advisory.py  asset_allocation_attributes.py  asset_class_hierarchy.py  asset_type.py  (+128 more)
FliberAPI/app/core/: config.py  utility.py
FliberAPI/app/db/: base.py  base_class.py
FliberAPI/app/service/: ability_configuration.py  advisor.py  areas_of_concerns.py  asset_advisory.py  asset_allocation_attributes.py  asset_class_hierarchy.py  asset_liability_category.py  asset_type.py  assets_limit.py  bank_account_type.py  bank_branches.py  banks.py  bonds_calculation.py  bse_account_type.py  bse_client_account.py  bse_client_code.py  bse_client_nominee.py  bse_client_occupation_code.py  bse_client_tax_status.py  bse_communication_mode.py  bse_country_code.py  bse_income_slab.py  bse_pan_exempt_category.py  bse_state_code.py  bucket.py  calculations.py  cas_data_upload_from_pulse_lab.py  cas_data_upload_to_pulse_lab.py  cas_upload.py  cash_free_configuration.py  choice.py  client_occupation_code.py  client_tax_status.py  corpus_status.py  daily_asset_data.py  daily_nav_data.py  epf_calculation.py  epfo_auto_fetch.py  event_type.py  expense_category.py  (+99 more)
FliberAPI/tests/app/: test_main.py
(+434 files in other folders)
