[tool.poetry]
name = "Fliber"
version = "0.1.0"
description = ""
authors = ["Piotr Rogulski <rivinek@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "^0.70.0"
SQLAlchemy = "^1.4.25"
uvicorn = "^0.15.0"
asyncpg = "^0.24.0"
alembic = "^1.7.4"
psycopg2 = "^2.9.1"
numpy = "^1.21.3"
numpy-financial = "^1.0.0"
pandas = "^1.3.4"
cryptography = "^35.0.0"
requests= "^2.26.0"
openpyxl="^3.0.9"
razorpay="^1.2.0"
schedule="^1.1.0"
celery="^5.2.3"
fastapi_utils="^0.2.1"
python-multipart="^0.0.5"
sendgrid="^6.9.5"
selenium="^"
webdriver-manager="^"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"
httpx = "^0.19.0"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
